--- a/resource/announcements.html
+++ b/resource/announcements.html
@@ -49,7 +49,7 @@ layout:
             <p>
                 {{ post.content | remove: '<p>' | remove: '</p>' | strip | remove: '"' }}
                 {% if post.link != nil %}
-                    <a href="/post/{{ post.link }}.html">Read more...</a>
+                    <a href="{{ post.link }}.html">Read more...</a>
                 {% endif%}
             </p>
         </div>
