Fix/add links in page footer

--- a/resource/footer.html
+++ b/resource/footer.html
@@ -14,18 +14,20 @@ layout:
 
     <div id="footer_column_two">
         <ul>
-            <li><a href="">National</a></li>
-            <li><a href="">Business</a></li>
-            <li><a href="">Peace and Order</a></li>
-            <li><a href="">Science and Technology</a></li>
-            <li><a href="">Opinion</a></li>
+            <li><a href="/news/headline/">Headlines</a></li>
+            <li><a href="/news/business/">Business</a></li>
+            <li><a href="/news/agrarian/">Agrarian</a></li>
+            <li><a href="/news/environment/">Environment</a></li>
+            <li><a href="/news/foreign_affairs/">Foreign Affairs</a></li>
+            <li><a href="/news/peace/">Peace Process</a></li>
+            <li><a href="/news/other/">Other News</a></li>
         </ul>
     </div>
 
     <div id="footer_column_three">
         <ul>
-            <li><a href="">About Us</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="/about/">About Us</a></li>
+            <li><a href="{{ site.data.socmed[0].link }}" target="{{ site.data.socmed[0].target }}" alt="{{ site.data.socmed[0].name }}">Contact Us</a></li>
         </ul>
     </div>
 
