Add footer column

--- a/resource/footer.html
+++ b/resource/footer.html
@@ -4,7 +4,7 @@ layout:
 
 <div id="footer_content">
 
-    <div id="footer_column_one" class="license">
+    <div id="footer_column_leftmost" class="license">
         <p><a rel="license" href="{{ site.data.links.cc_by_sa }}" target="_blank"><img alt="Creative Commons License" style="border-width:0" src="{{ site.data.links.cc_by_sa_image }}" /></a><br />Except where otherwise noted, the <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" rel="dct:type">content</span> on this site (<span class='plain_color highlight_cc'><a xmlns:cc="http://creativecommons.org/ns#" href="http://dutertetimes.github.io/" property="cc:attributionName" rel="cc:attributionURL">Duterte Times</a></span>) is licensed under a <a rel="license" href="{{ site.data.links.cc_by_sa_license }}" target="_blank">Creative Commons Attribution-ShareAlike 4.0 International License</a> (<span class='highlight_cc'>CC BY-SA</span>). You are free to copy, reproduce, distribute, display, and make adaptations but you must provide proper attribution.</p>
         <p>
             Visit the <a href="{{ site.data.links.creative_commons }}" target="_blank">Creative Commons</a> website.<br/>
@@ -12,8 +12,9 @@ layout:
         </p>
     </div>
 
-    <div id="footer_column_two">
+    <div id="footer_column_one">
         <ul>
+            <li><a href="/">Home</a></li>
             <li><a href="/news/headline/">Headlines</a></li>
             <li><a href="/news/business/">Business</a></li>
             <li><a href="/news/agrarian/">Agrarian</a></li>
@@ -24,6 +25,12 @@ layout:
         </ul>
     </div>
 
+    <div id="footer_column_two">
+        <ul>
+            <li><a href="/info/gov">Government</a></li>
+        </ul>
+    </div>
+
     <div id="footer_column_three">
         <ul>
             <li><a href="/about/">About Us</a></li>
@@ -31,7 +38,7 @@ layout:
         </ul>
     </div>
 
-    <div id="footer_column_four" class="license">
+    <div id="footer_column_rightmost" class="license">
         <p>
             Powered by <a href="http://jekyllrb.com" title="Jekyll" target="_blank">Jekyll</a> <br/>
             Hosted by <a href="http://github.com" title="GitHub" target="_blank">Github</a> <br/>
