Add page for foreign media links

--- a/resource/footer.html
+++ b/resource/footer.html
@@ -28,6 +28,7 @@ layout:
     <div id="footer_column_two">
         <ul>
             <li><a href="/info/gov">Government</a></li>
+            <li><a href="/info/media_foreign">Foreign Media</a></li>
         </ul>
     </div>
 
