--- a/resource/footer.html
+++ b/resource/footer.html
@@ -29,6 +29,14 @@ layout:
         <ul>
             <li><a href="/info/gov">Government</a></li>
             <li><a href="/info/media_foreign">Foreign Media</a></li>
+            <hr/>
+            <li><a href="/info/law/">Law</a></li>
+            <li><a href="/info/people/">People</a></li>
+            <li><a href="/info/places/">Places</a></li>
+            <li><a href="/info/org/">Organization</a></li>
+            <li><a href="/info/company/">Company</a></li>
+            <li><a href="/info/doc">Papers and Documents</a></li>
+            <li><a href="/info/sources/">Info and News Sources</a></li>
         </ul>
     </div>
 
