--- a/resource/footer.html
+++ b/resource/footer.html
@@ -25,7 +25,7 @@ layout:
             <li><a href="/news/foreign_affairs/">Foreign Affairs</a></li>
             <li><a href="/news/other/">Other News</a></li>
             <hr>
-            <li><a href="/opinion/">Opinions</a></li>
+            <li><a href="/topics/opinion/">Opinions</a></li>
             <li><a href="/news/peace_process/">Peace Process</a></li>
         </ul>
     </div>
