Rename topic todo filename

--- a/topics/opinion/index.html
+++ b/topics/opinion/index.html
@@ -7,5 +7,5 @@ tags: []
 published: true
 ---
 
-{% assign todo_data = site.data.opinion %}
+{% assign todo_data = site.data.todo_opinion %}
 {% include section_index.html data=todo_data category="opinion" %}
