--- a/topics/opinion/index.html
+++ b/topics/opinion/index.html
@@ -8,4 +8,4 @@ published: true
 ---
 
 {% assign todo_data = site.data.todo_opinion %}
-{% include section_index.html data=todo_data category="opinion" %}
+{% include section_index.html data=todo_data category="opinion" post_image="post_opinion_16_9.png" %}
