--- a/topics/peace_process/index.html
+++ b/topics/peace_process/index.html
@@ -8,4 +8,4 @@ published: true
 ---
 
 {% assign todo_data = site.data.todo_peace_process %}
-{% include section_index.html data=todo_data category="peace_process" %}
+{% include section_index.html data=todo_data category="peace_process" post_image="post_peace_16_9.png" %}
