Add all news index

--- a/resource/footer.html
+++ b/resource/footer.html
@@ -16,6 +16,8 @@ layout:
     <div id="footer_column_one">
         <ul>
             <li><a href="/">Home</a></li>
+            <li><a href="/news/">All News</a></li>
+            <hr>
             <li><a href="/news/president/">President</a></li>
             <li><a href="/news/press/">Press Events</a></li>
             <li><a href="/news/economy/">Economy</a></li>
