Fix info links in footer

--- a/resource/footer.html
+++ b/resource/footer.html
@@ -34,15 +34,15 @@ layout:
 
     <div id="footer_column_two">
         <ul>
-            <li><a href="/info/gov">Government</a></li>
-            <li><a href="/info/media_foreign">Foreign Media</a></li>
+            <li><a href="/info/gov/">Government</a></li>
+            <li><a href="/info/media_foreign/">Foreign Media</a></li>
             <hr/>
             <li><a href="/info/law/">Laws</a></li>
             <li><a href="/info/person/">People</a></li>
             <li><a href="/info/place/">Places</a></li>
             <li><a href="/info/org/">Organizations</a></li>
             <li><a href="/info/company/">Companies</a></li>
-            <li><a href="/info/doc">Papers and Documents</a></li>
+            <li><a href="/info/doc/">Papers and Documents</a></li>
             {% if site.development %}
             <li><a href="/info/sources/">Info and News Sources</a></li>
             {% endif %}
