Add quotes index page

--- a/resource/footer.html
+++ b/resource/footer.html
@@ -36,7 +36,7 @@ layout:
         <ul>
             <li><a href="/info/gov/">Government</a></li>
             <li><a href="/info/media_foreign/">Foreign Media</a></li>
-            <hr/>
+            <hr>
             <li><a href="/info/law/">Laws</a></li>
             <li><a href="/info/person/">People</a></li>
             <li><a href="/info/place/">Places</a></li>
@@ -46,6 +46,8 @@ layout:
             {% if site.development %}
             <li><a href="/info/sources/">Info and News Sources</a></li>
             {% endif %}
+            <hr>
+            <li><a href="/info/quote/">Duterte Quotes</a></li>
         </ul>
     </div>
 
