Move posts under peace_process category to news

--- a/resource/footer.html
+++ b/resource/footer.html
@@ -25,10 +25,10 @@ layout:
             <li><a href="/news/agrarian/">Agrarian</a></li>
             <li><a href="/news/environment/">Environment</a></li>
             <li><a href="/news/foreign_affairs/">Foreign Affairs</a></li>
+            <li><a href="/news/peace_process/">Peace Process</a></li>
             <li><a href="/news/other/">Other News</a></li>
             <hr>
             <li><a href="/topics/opinion/">Opinions</a></li>
-            <li><a href="/topics/peace_process/">Peace Process</a></li>
         </ul>
     </div>
 
