Add contact us page

--- a/resource/footer.html
+++ b/resource/footer.html
@@ -51,7 +51,7 @@ layout:
     <div id="footer_column_three">
         <ul>
             <li><a href="/about/">About Us</a></li>
-            <li><a href="{{ site.data.socmed[0].link }}" target="{{ site.data.socmed[0].target }}" alt="{{ site.data.socmed[0].name }}">Contact Us</a></li>
+            <li><a href="/contact_us/">Contact Us</a></li>
         </ul>
     </div>
 
