Update links to section index page

--- a/resource/footer.html
+++ b/resource/footer.html
@@ -28,6 +28,8 @@ layout:
             <li><a href="/news/peace_process/">Peace Process</a></li>
             <li><a href="/news/other/">Other News</a></li>
             <hr>
+            <li><a href="/story/">Stories</a></li>
+            <li><a href="/topic/">Topics</a></li>
             <li><a href="/opinion/">Opinions</a></li>
         </ul>
     </div>
